--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Client</title>
+  <title>E-Shop Free | Fashion</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/icon.png">
+  <!-- Bootstrap Grid -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-grid-only@1/bootstrap.min.css">
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&family=Nunito:wght@200;300;400&family=Open+Sans:wght@300;400&family=Staatliches&display=swap">
 </head>
-<body>
+<body class="m-0 p-0">
   <app-root></app-root>
 </body>
 </html>
